// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssnListEditorField function should return <ListEditor> 1`] = `
<ListEditor
  errorText={null}
  formComponent={[Function]}
  input={
    {
      "onChange": [MockFunction],
    }
  }
  listEditorId="issn-list-editor"
  onChange={[MockFunction]}
/>
`;

exports[`IssnListEditorField function should return <ListEditor> with error attributes 1`] = `
<ListEditor
  error={true}
  errorText="test"
  formComponent={[Function]}
  input={
    {
      "onChange": [MockFunction],
    }
  }
  listEditorId="issn-list-editor"
  meta={
    {
      "error": "test",
    }
  }
  onChange={[MockFunction]}
/>
`;
